[package]
name = "pw"
version = "0.1.0"
authors = ["Steve Richey <srichey@gowithfloat.com>"]
license = "MIT"
description = "A simple command-line password generator."
homepage = "https://github.com/steverichey/pw"
repository = "https://github.com/steverichey/pw"
readme = "readme.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
clipboard = "0.5.0"
rand = "0.8.2"
termion = "1.5.6"
